--- a/ReadME.me
+++ b/ReadME.me
@@ -1,12 +1,51 @@
-// Loading Indicator for style
-// History Display
-// Clear History button 
-// Persistent Storage store in localstorage
-// Improved UI/UX
-// DarkMode onclick
-// Chatbot Personality
-// Markdown Support display bold italic etc properly output
-// Search from history using keyup event
+## Description
 
-storing history for different userw via send also "userid"  in the POST REQ
-history_<userID>.json
+This project, **Gemini ChatBot**, is a collaborative effort between two college friends, Shaiv and Sharad. We aim to create a responsive and interactive chatbot that utilizes the Gemini API to provide users with a variety of functionalities.
+
+## Current Features
+
+1. **Text Generation:** Utilizes the Gemini API to generate text responses based on user prompts.
+2. **Text Summarization:** Summarizes longer pieces of text provided by users.
+3. **Language Translation:** Translates text between different languages using the API.
+4. **Simple Code Generation:** Generates basic code snippets based on user queries.
+5. **Question Answering:** Answers questions based on the provided information from the user.
+6. **Chat History Display:** Displays previous questions and answers in a user-friendly format.
+7. **Clear History Functionality:** Allows users to easily clear their chat history.
+8. **Dark Mode Toggle:** Enables users to switch between light and dark themes for better readability.
+
+## To-Do List
+
+1. **Markdown Support:** Renders Markdown for styling text in responses (bold, italic, etc.).
+2. **Implement Loading Indicator** for response generation.
+3. **Display Chat History** with clear formatting.
+4. **Add Clear History Button** for easy deletion.
+5. **Store History in LocalStorage** for persistence.
+6. **Enhance UI/UX** for a more engaging experience.
+7. **Toggle Dark Mode** for user preference.
+8. **Develop Chatbot Personality** for unique interactions.
+9. **Support Markdown Formatting** in outputs (display bold, italic, etc.).
+10. **Enable Search from History** using keyup events.
+11. **Store History for Different Users** with `userID` in the POST request (e.g., `history_<userID>.json`).
+12. **Create User Authentication** for personalized experiences.
+13. **Support Multiple User Profiles** for distinct histories.
+14. **Implement Response Throttling** to prevent spam.
+15. **Add Sentiment Analysis** for tailored responses.
+16. **Incorporate Voice Input** for accessibility.
+17. **Allow Rich Media Responses** alongside text.
+18. **Provide User Feedback Options** (thumbs up/down).
+19. **Generate Personalized Greetings** based on context.
+20. **Offer Quick Reply Suggestions** for follow-ups.
+21. **Save Favorite Conversations** for quick access.
+22. **Enable Theme Customization** for user preferences.
+23. **Send Browser Notifications** for responses.
+24. **Create Help/FAQ Section** for user support.
+25. **Integrate External APIs** for enhanced functionality.
+26. **Allow Chat History Export** in various formats.
+27. **Enable Custom Commands** for repetitive tasks.
+28. **Develop Performance Analytics Dashboard** for insights.
+29. **Implement Accessibility Features** for inclusivity.
+30. **Persistent Storage:** Stores chat history in LocalStorage for persistence across sessions.
+31. **Loading Indicator:** Shows a loading indicator while generating responses to enhance user experience.
+
+## Screenshot
+[![darkmod.png](https://i.postimg.cc/tJRP1CHD/darkmod.png)](https://postimg.cc/PpcN9HJ8)[![whitemode.png](https://i.postimg.cc/wvQLTRn7/whitemode.png)](https://postimg.cc/mzhtmkLs)
